--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@chakra-ui/react": "^2.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@types/three": "^0.143.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.3.3",
     "next": "^12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.34.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "three": "^0.143.0"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
